--- a/css/main.css
+++ b/css/main.css
@@ -404,6 +404,65 @@ body {
   position: relative;
   display: block;
 }
+.news-wrap {
+  position: relative;
+  display: block;
+  width: calc(50% - 95px);
+}
+.news-inner .news-wrap:first-child {
+  float: left;
+}
+.news-inner .news-wrap:last-child {
+  float: right;
+}
+.news-wrap h3 {
+  position: relative;
+  display: block;
+  font-size: 32px;
+  color: #fff;
+  font-weight: 300;
+  margin-bottom: 45px;
+}
+.news-content {
+  position: relative;
+  display: block;
+}
+.news-list > li {
+  position: relative;
+  display: block;
+  border-top: 1px solid rgba(255, 255, 255, 0.3);
+  padding: 25px 0;
+}
+.news-list > li:last-child {
+  position: relative;
+  display: block;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+.news-list > li > a {
+  position: relative;
+  display: block;
+  text-align: left;
+  color: #fff;
+}
+.news-list > li > a::after {
+  position: absolute;
+  right: 29px;
+  top: 0;
+  width: 48px;
+  height: 23px;
+  background: url(../images/bg_common.png) no-repeat;
+  background-position: 0 -49px;
+  display: block;
+}
+.news-list > li > a > .news-txt {
+  position: relative;
+  display: block;
+  width: 385px;
+  /* 말줄임... 표시하는 법 */
+  white-space: nowrap; /*줄 바꾸지마*/
+  text-overflow: ellipsis; /*점선으로 표시*/
+  overflow: hidden; /*넘어가면 숨겨*/
+}
 /* 고객센터 */
 .cs {
   position: relative;
