--- a/css/main.css
+++ b/css/main.css
@@ -613,3 +613,30 @@ body {
   position: relative;
   display: block;
 }
+.footer-logo {
+  position: relative;
+  display: block;
+  margin-right: 130px;
+  float: left;
+}
+.footer-info {
+  position: relative;
+  display: block;
+  float: left;
+}
+.footer-list > li {
+  position: relative;
+  display: block;
+  font-size: 13px;
+  color: #c3c3c3;
+  margin-bottom: 5px;
+}
+.footer-list > li > address {
+  position: relative;
+  display: inline-block;
+  font-style: normal;
+}
+.footer-list > li > i {
+  position: relative;
+  display: inline-block;
+}
