--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,8 @@ body {
 .container {
   position: relative;
   display: block;
-  width: 1200px;
+  width: 100%;
+  max-width: 1200px;
   margin: 0 auto;
 }
 .clearfix::after {
@@ -92,7 +93,8 @@ body {
 .header-inner {
   position: relative;
   display: block;
-  width: 1800px;
+  width: 100%;
+  max-width: 1800px;
   margin: 0 auto;
   z-index: 1;
 }
